detalles en caja de web

--- a/web.html
+++ b/web.html
@@ -76,7 +76,7 @@
                     <li><i class="fas fa-archive"></i>Servidor Web de 10 GB</li>
                     </ul>
                     <div class="boton">
-                        <p>Elegir</p>
+                        <a href="./contacto.html">Elegir</a>
                      </div>
                 </div>
             <div class="semi-senior">
@@ -89,7 +89,7 @@
                     <li><i class="fas fa-archive"></i>Servidor web de 50 GB</li>
                     </ul>
                     <div class="boton">
-                        <p>Elegir</p>
+                        <a href="./contacto.html">Elegir</a>
                      </div>
                 </div>
                 <div class="senior">
@@ -102,7 +102,7 @@
                             <li><i class="fas fa-archive"></i>Servidor web ilimitado</li>
                         </ul>
                     <div class="boton">
-                       <p>Elegir</p>
+                        <a href="./contacto.html">Elegir</a>
                     </div>
                 </div>
            
