--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         
                 <div class="collapse navbar-collapse nav__Bar" id="navbarTogglerDemo01">
                     <div class="logo nav-brand">
+                    <img src="./img/spider-logo.png" alt="logo">
                     <p>SpiderWeb</p></a>
                     </div>
                         <ul class="navbar-nav">
@@ -65,7 +66,7 @@
                     <p> y llegues a mas personas.</p>
             </div>
             <div class="img__relleno ">
-                <img src="./img/persona-idea.png" alt="persona_idea" class="img-fluid">
+                <img src="./img/persona-idea.png" class="img-fluid" alt="persona_idea">
             </div>
             <div class="boton__contacto">
                 <a href="./contacto.html">Contactenos</a>
@@ -74,7 +75,7 @@
         
         <section class="marketing">
             <div class="img__relleno">
-                <img src="./img/persona-negocio.png" alt="negocio" class="img-fluid">
+                <img src="./img/persona-negocio.png" class="img-fluid" alt="negocio" >
             </div>
             <div class="boton__contacto">
                 <a href="./contacto.html">Contactenos</a>
