--- a/marketing.html
+++ b/marketing.html
@@ -34,6 +34,7 @@
         
                 <div class="collapse navbar-collapse nav__Bar" id="navbarTogglerDemo01">
                     <div class="logo nav-brand">
+                        <img src="./img/spider-logo.png" alt="logo">
                     <p>SpiderWeb</p></a>
                     </div>
                         <ul class="navbar-nav">
