Terminación con agregado de metas y cambios en diseño, agregado de boton fijo

--- a/contacto.html
+++ b/contacto.html
@@ -19,7 +19,7 @@
 
 </head>
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid" id="header">
 
         <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm ">
             <div class="container-fluid">
@@ -69,7 +69,7 @@
                 <input type="email" name="email" id="email" placeholder="nombre@ejemplo.com">
                 <label for="tel">Telefono de contacto</label>
                 <input type="tel" name="tel" id="tel">
-                <label for="conoer">Como nos conociste</label>
+                <label for="conocer">Como nos conociste</label>
                 <input type="radio" name="conocer" id="conocer">Web
                 <input type="radio" name="conocer" id="conocer">Redes
                 <input type="radio" name="conocer" id="conocer">Conocido
@@ -92,13 +92,15 @@
             <ul>
                 <li><a href="./index.html">home</a></li>
                 <li><a href="./marketing.html">Marketing</a></li>
-                <li><a href="#">Web</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="./web.html">Web</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </div>
     
 
     </footer>
+    <div class="boton-subida"><a href="#header"><img src="./img/boton_arriba.png" alt="boton-subida"></a></div>   
     <!-- Scrip Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
