--- a/marketing.html
+++ b/marketing.html
@@ -19,11 +19,14 @@
     <script src="https://kit.fontawesome.com/ed0b8e39e2.js" crossorigin="anonymous"></script>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <!-- SEO -->
+    <meta name="description" content="Desarrollamos tu campaña de Markting Digital en Redes sociales y SEM">
+    <meta name="description" content="SEO, SEM,Adsword,marketing digital,comunity manager,redes sociales, social media,branding,Facebook,Instagram,Analytics">
     <title>Armamos tu página web</title>
 
 </head>
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid" id="header">
 
         <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm ">
             <div class="container-fluid">
@@ -123,15 +126,16 @@
         <div class="mapa__sitio">
             <p>Mapa de sitio</p>
             <ul>
-                <li><a href="#">home</a></li>
-                <li><a href="#">Marketing</a></li>
-                <li><a href="#">Web</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="./index.html">home</a></li>
+                <li><a href="./marketing.html">Marketing</a></li>
+                <li><a href="./web.html">Web</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </div>
     
 
     </footer>
+    <div class="boton-subida"><a href="#header"><img src="./img/boton_arriba.png" alt="boton-subida"></a></div>   
     <!-- Scrip Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
