--- a/index.html
+++ b/index.html
@@ -14,11 +14,14 @@
     <script src="https://kit.fontawesome.com/ed0b8e39e2.js" crossorigin="anonymous"></script>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <!-- SEO -->
+    <meta name="description" content="Te brindamos el mejor servicio de diseño web">
+    <meta name="keywords" content="diseño,pagina web,desarrollo web,diseño responsive,web,fullstack,diseño web seo,diseño web a medida,programacion frondend,bootstrap,sass">
     <title>Armamos tu página web</title>
 
 </head>
 <body>
-    <header class="container-fluid">
+    <header class="container-fluid" id="header">
 
         <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm ">
             <div class="container-fluid">
@@ -108,6 +111,7 @@
     
 
     </footer>
+    <div class="boton-subida"><a href="#header"><img src="./img/boton_arriba.png" alt="boton-subida"></a></div>   
     <!-- Scrip Bootstrap -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ" crossorigin="anonymous"></script>
 </body>
