--- a/index.html
+++ b/index.html
@@ -104,8 +104,9 @@
             <ul>
                 <li><a href="./index.html">home</a></li>
                 <li><a href="./marketing.html">Marketing</a></li>
-                <li><a href="#">Web</a></li>
-                <li><a href="#">Contacto</a></li>
+                <li><a href="./web.html">Web</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </div>
     
