--- a/marketing.html
+++ b/marketing.html
@@ -129,6 +129,7 @@
                 <li><a href="./index.html">home</a></li>
                 <li><a href="./marketing.html">Marketing</a></li>
                 <li><a href="./web.html">Web</a></li>
+                <li><a href="./portfolio.html">Portfolio</a></li>
                 <li><a href="./contacto.html">Contacto</a></li>
             </ul>
         </div>
