--- a/marketing.html
+++ b/marketing.html
@@ -26,7 +26,7 @@
 
 </head>
 <body>
-    <header class="container-fluid" id="header">
+    <header id="header">
 
         <nav class="navbar navbar-expand-lg navbar-expand-md navbar-expand-sm ">
             <div class="container-fluid">
@@ -71,7 +71,7 @@
             </div>
             <section>
                 
-               <article class="container container-sm">
+               <article class="container">
                 <div class="card margen" style="width: 18rem;">
                     <img src="./img/influencer.jpg" class="card-img-top" alt="influencer">
                     <div class="card-body">
