Ajustes responsive y otros menores

--- a/web.html
+++ b/web.html
@@ -66,7 +66,8 @@
     </header>
     <main>
         <div class="encabezado__servicio">
-            <h2 class="animate__animated animate__bounce animate__repeat-3	3">Te creamos tu web</h2>
+                         <!-- No se uso H1 por conflicto con estilo de Bootstrap -->
+            <h2 class="animate__animated animate__bounce animate__repeat-3 3" id="titulo">Te creamos tu web</h2>
             <p class="animate__animated animate__backInLeft">Elegi el servicio que mas se adapte a tu negocio y nosotros te diseñamos tu web</p>
         </div>
        <section>
