--- a/web.html
+++ b/web.html
@@ -70,7 +70,7 @@
             <h2 class="animate__animated animate__bounce animate__repeat-3 3" id="titulo">Te creamos tu web</h2>
             <p class="animate__animated animate__backInLeft">Elegi el servicio que mas se adapte a tu negocio y nosotros te diseñamos tu web</p>
         </div>
-       <section>
+       <section class="container-fluid">
          <div class="beginner">
             <div class="titulo">
                <h3>Beginner</h3>
