Se ajusto responsive y agrego titulo en home

--- a/marketing.html
+++ b/marketing.html
@@ -80,7 +80,7 @@
                       <p class="card-text">Empeza a hacerte famoso en las redes</p>
                       <ul>
                         <li>Calendario mensual de contenido en Facebook</li>
-                        <li>Fan Page de Facebook </li>
+                        <li>Administración de Fan Page de Facebook </li>
                         <li>Publicación de Contenido</li>
                        </ul>
                       <a href="./contacto.html" class="btn btn-primary">Elegir</a>
@@ -94,7 +94,7 @@
                       <p class="card-text">Arma tu campaña para promocionar tus productos</p>
                       <ul>
                         <li>Calendario mensual en Instagram</li>
-                        <li>Publicaciones y Reels en Instagram</li>
+                        <li>Publicaciones en Instagram</li>
                         <li>Stories</li>
                       </ul>
                       <a href="./contacto.html" class="btn btn-primary">Elegir</a>
