--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
     <script src="https://kit.fontawesome.com/ed0b8e39e2.js" crossorigin="anonymous"></script>
     <!-- Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
+    <!-- Animate -->
+    <link
+    rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
     <!-- SEO -->
     <meta name="description" content="Te brindamos el mejor servicio de diseño web">
     <meta name="keywords" content="diseño,pagina web,desarrollo web,diseño responsive,web,fullstack,diseño web seo,diseño web a medida,programacion frondend,bootstrap,sass">
@@ -60,6 +64,9 @@
         
         </header>
     <main>
+        
+        <h1 class="animate__animated animate__backInUp">Somos SpiderWeb</h1>
+   
         <section class="quienes__somos">
             <div class="titulo">
                 <h2>Nos encargamos de tu Web</h2>
