--- a/web.html
+++ b/web.html
@@ -70,15 +70,15 @@
             <h2 class="animate__animated animate__bounce animate__repeat-3 3" id="titulo">Te creamos tu web</h2>
             <p class="animate__animated animate__backInLeft">Elegi el servicio que mas se adapte a tu negocio y nosotros te diseñamos tu web</p>
         </div>
-       <section class="container-fluid">
+       <section>
          <div class="beginner">
             <div class="titulo">
                <h3>Beginner</h3>
             </div>
                 <ul>
                     <li><i class="fas fa-sitemap"></i>Diseño de página</li>
-                    <li><i class="far fa-envelope"></i>3 Cuentas de correo electrónico</li>
-                    <li><i class="fas fa-archive"></i>Servidor Web de 10 GB</li>
+                    <li><i class="far fa-envelope"></i>3 cuentas de correo electrónico</li>
+                    <li><i class="fas fa-archive"></i>Servidor Web de 10 GB </li>
                     </ul>
                     <div class="boton">
                         <a href="./contacto.html">Elegir</a>
